--- a/observatory.html
+++ b/observatory.html
@@ -124,10 +124,10 @@
                     <iframe width="500" height="400" frameborder="0" src="https://www.bing.com/maps/embed?h=400&w=500&cp=30.264049129314728~120.15878065748258&lvl=16&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
                     </iframe>
                 </div>
-                <p>Fengqi Observatory was built in 20th century, and the whole observatory was completely upgraded in 2013.<br><br>
-                   凤起天文台始建于20世纪，2013年天文台整体改造升级。<br></p>     
+                <p>Fengqi Observatory was built in late 20th century, and the whole observatory was completely upgraded in 2013.<br><br>
+                   凤起天文台始建于20世纪末，在2013年对天文台进行了整体改造升级。<br></p>     
             </div>
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-12">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#1990s" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -158,6 +158,12 @@
                         <img src="https://h14ztws.github.io/pic/2016.jpg" class="img-responsive" alt="image-alt">
                     </a>
                 </div>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>Fengqi Observatory now fixedly equips the Celetron C14 and Paramount MX. <br><br>
+                   凤起天文台现在使用杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
+                   There are also many mobile devices, including Skywatcher BKP250/1250, Skywatcher NEQ6, Skywatcher BKP150/750,etc.<br><br>
+                   我们还有很多可移动的设备，包括信达10寸反射望远镜、NEQ6赤道仪等。<br></p>     
             </div>
         </div>
     </div>
@@ -219,7 +225,7 @@
                             <h3>20世纪90年代天文台旧照</h3>
                             <hr class="star-primary">
                             <img src="pic/1990s.jpg" class="img-responsive img-centered" alt="image-alt">
-                            <ul>
+                            <ul class="list-inline">
                                 <li>Fengqi Observatory's old photo in 1990s, with the old dome.</li>
                                 <li>20世纪90年代，凤起天文台旧照。</li>
                             </ul>
@@ -246,9 +252,10 @@
                             <h3>2008年天文台旧照</h3>
                             <hr class="star-primary">
                             <img src="pic/2008.jpg" class="img-responsive img-centered" alt="image-alt">
-                            <p>Fengqi Observatory's old photo in 2008, with the old dome.<dr><dr>
-                               2008年，凤起天文台旧照。
-                            </p>
+                            <ul class="list-inline">
+                                <li>Fengqi Observatory's old photo in 2008, with the old dome.</li>
+                                <li>2008年，凤起天文台旧照。</li>
+                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -269,12 +276,13 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>The New Observatory</h2>
-                            <h3>天文台新貌</h3>
+                            <h2>天文台新貌</h2>
                             <hr class="star-primary">
                             <img src="pic/2016.jpg" class="img-responsive img-centered" alt="image-alt">
-                            <p>After the whole observatory was completely upgraded in 2013, Fengqi observatory looked well.(This photo was taken in 2016.)<dr><dr>
-                               在经过天文台整体改造升级后，凤起天文台焕然一新。（摄于2016年）
-                            </p>
+                            <ul class="list-inline">
+                                <li>After the whole observatory was completely upgraded in 2013, Fengqi observatory looked well.(This photo was taken in 2016.)</li>
+                                <li>在经过天文台整体改造升级后，凤起天文台焕然一新。（摄于2016年）</li>
+                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
