--- a/observatory.html
+++ b/observatory.html
@@ -160,10 +160,15 @@
                 </div>
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <p>Fengqi Observatory now fixedly equips the Celetron C14 and Paramount MX. <br><br>
+                <p><br>Fengqi Observatory now fixedly equips the Celetron C14 (which is the largest Schmidt-Cassegrain telescope in Hangzhou) and Paramount MX. <br><br>
                    凤起天文台现在使用杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
-                   There are also many mobile devices, including Skywatcher BKP250/1250, Skywatcher NEQ6, Skywatcher BKP150/750,etc.<br><br>
-                   我们还有很多可移动的设备，包括信达10寸反射望远镜、NEQ6赤道仪等。<br></p>     
+                   We independently designed and manufactured the AstroSolar adapter of Celetron C14 which may be the largest adapter for Schmidt-Cassegrain telescope in Zhejiang Province. It enables the Celetron C14 to make high-quality solar observations during the day.<br><br>
+                   我们自主设计制作了（可能是）浙江省口径最大的施卡望远镜巴德膜，使得C14望远镜可以在白天进行高质量的太阳观测。
+                   There are also many mobile devices, including Skywatcher BKP250/1250, Skywatcher NEQ6, Skywatcher BKP150/750, etc.<br><br>
+                   我们还有很多可移动的设备，包括信达10寸反射望远镜、NEQ6赤道仪等。<br><br>
+                   We use them for outdoor observation activities.<br><br>
+                   这些设备一般被用于外出观测活动。<br><br>
+                </p>     
             </div>
         </div>
     </div>
