--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="col-lg-4">
                     <p style="color: #fff;">杭十四中坐落在美丽的西湖旁，宝石山脚下。我们的天文台就位于校园内，在第二教学楼的顶端。<br><br>
                                             这里拥有许多的天文仪器设备，其中最引人注目的当属杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
-                                            受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。<br>
+                                            受限于杭州的光污染，我们现在将它用于教学、天文观测和天文摄影等。<br><br>
                         <a href="https://h14ztws.github.io/observatory.html">>>>View More details</a>
                     </p>
                 </div>
