--- a/observatory.html
+++ b/observatory.html
@@ -162,9 +162,25 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <p><br>Fengqi Observatory now fixedly equips the Celetron C14 (which is the largest Schmidt-Cassegrain telescope in Hangzhou) and Paramount MX. <br><br>
                    凤起天文台现在使用杭州市最大的施卡望远镜——星特朗C14望远镜，和它的赤道仪——派拉蒙MX。<br><br>
-                   We independently designed and manufactured the AstroSolar adapter of Celetron C14 which may be the largest adapter for Schmidt-Cassegrain telescope in Zhejiang Province. It enables the Celetron C14 to make high-quality solar observations during the day.<br><br>
-                   我们自主设计制作了（可能是）浙江省口径最大的施卡望远镜巴德膜，使得C14望远镜可以在白天进行高质量的太阳观测。
-                   There are also many mobile devices, including Skywatcher BKP250/1250, Skywatcher NEQ6, Skywatcher BKP150/750, etc.<br><br>
+                   There are different cameras, including QHY 9SM, QHY 8PRO, ZWO ASI174MM, etc., which can support multiple tasks for teaching, observation and astrophotography.<br><br>
+                   这里有不同种类的相机，包括QHY 9SM，QHY 8PRO，ZWO ASI174MM等，它们可以支持教学，观察和天文摄影的多个任务。<br><br>
+                   We are now undergoing network transformation and will be able to provide remote observatory services later.<br><br>
+                   我们正在对天文台进行网络化改造，之后将可以提供远程天文台服务。<br><br>
+                </p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-3">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/inside.jpg" alt="">
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <p><br>We independently designed and manufactured the AstroSolar adapter of Celetron C14 which may be the largest adapter for Schmidt-Cassegrain telescope in Zhejiang Province. It enables the Celetron C14 to make high-quality solar observations during the day.<br><br>
+                   我们自主设计制作了（可能是）浙江省口径最大的施卡望远镜巴德膜，使得C14望远镜可以在白天进行高质量的太阳观测。<br><br>
+                </p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-3">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/baader.jpg" alt="">
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>There are also many mobile devices, including Skywatcher BKP250/1250, Skywatcher NEQ6, Skywatcher BKP150/750, etc.<br><br>
                    我们还有很多可移动的设备，包括信达10寸反射望远镜、NEQ6赤道仪等。<br><br>
                    We use them for outdoor observation activities.<br><br>
                    这些设备一般被用于外出观测活动。<br><br>
