--- a/members.html
+++ b/members.html
@@ -122,6 +122,10 @@
                    我们对星空充满了向往，对天文学的许多方向感兴趣。<br><br>
                    Most of us are students of <a href="http://www.h14z.cn/category/id1755144009448654642.htm">Zhejiang Province Hangzhou No.14 High School</a>.<br><br>
                    我们的成员主要来自<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>。<br><br>
+                   We will have a formal gathering at the beginning of each fall semester(always in September) to recruit new members. Of course, you can also apply to join us during the whole term.<br><br>
+                   我们将在每年9月开学时举行招新活动, 当然您也可以在学期中申请加入我们。<br><br>
+                   We welcome all students interested in astronomy to join us！<br><br>
+                   我们欢迎所有对天文感兴趣的同学加入我们！<br><br>
                    Here is part of our members.<br><br>
                    下面是我们部分成员的简介。<br><br>                 
                 </p>               
@@ -162,7 +166,7 @@
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
-                    <li>Vice-President of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
+                    <li>Associate President of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
                     <li>杭州市高中天文联合会副理事长</li>
                     <li>the First Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组一等奖</li>
