--- a/members.html
+++ b/members.html
@@ -149,7 +149,7 @@
                 <h4>Student Committee 理事会</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <!img class="img-responsive" src="https://h14ztws.github.io/pic/wy.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yun Wang 王芸<br></p>
@@ -175,7 +175,7 @@
                 </ul>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <!img class="img-responsive" src="https://h14ztws.github.io/pic/dy.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yao Dong 董垚<br></p>
@@ -185,7 +185,7 @@
                 </ul>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <!img class="img-responsive" src="https://h14ztws.github.io/pic/cyc.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yiceng Cheng 程忆曾<br></p>
@@ -210,7 +210,7 @@
                 <h4>Adivser 顾问</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <!img class="img-responsive" src="https://h14ztws.github.io/pic/dt.jpg" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/dt.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Zhichen Wang 王智琛（諦聽）<br></p>
