--- a/members.html
+++ b/members.html
@@ -136,7 +136,7 @@
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/whb.jpg" alt="">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <p>Haibin Wu 吴海斌<br></p>
                 <ul class="list-inline item-details">
                     <li>the Outstanding Counselor Award of Zhejiang Province Astronomy Olympiad, 2019</li>
@@ -158,6 +158,7 @@
                     <li>杭十四中天文社社长</li>
                 </ul>
             </div>
+            <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/cym.jpg" alt="">
             </div>
@@ -174,6 +175,7 @@
                     <li>2018年，浙江省天文奥赛高中组三等奖</li>
                 </ul>
             </div>
+            <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
@@ -184,6 +186,7 @@
                     <li>杭十四中天文社副社长</li>
                 </ul>
             </div>
+            <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
@@ -194,6 +197,7 @@
                     <li>杭十四中天文社副社长</li>
                 </ul>
             </div>
+            <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/shy.jpg" alt="">
             </div>
