--- a/members.html
+++ b/members.html
@@ -126,9 +126,15 @@
                    我们将在每年9月开学时举行招新活动, 当然您也可以在学期中申请加入我们。<br><br>
                    We welcome all students interested in astronomy to join us！<br><br>
                    我们欢迎所有对天文感兴趣的同学加入我们！<br><br>
-                   Here is part of our members.<br><br>
-                   下面是我们部分成员的简介。<br><br>                 
-                </p>               
+                </p>
+            </div>
+            <div class="col-lg-2 col-lg-offset-2">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/hy.jpg" alt="">
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>Here is part of our members.<br><br>
+                   下面是我们部分成员的简介。<br><br>
+                </p>
             </div>
             <div class="col-lg-12 text-center">
                 <h4>Guidance Counselor 指导老师</h4>
@@ -151,7 +157,7 @@
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <p>Yun Wang 王芸<br></p>
                 <ul class="list-inline item-details">
                     <li>President of Hangzhou No.14 High School Astronomy Association</li>
@@ -162,7 +168,7 @@
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/cym.jpg" alt="">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <p>Yuming Cao 曹雨铭<br></p>
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
@@ -179,7 +185,7 @@
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <p>Yao Dong 董垚<br></p>
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
@@ -190,7 +196,7 @@
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <p>Yiceng Cheng 程忆曾<br></p>
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
@@ -201,7 +207,7 @@
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/shy.jpg" alt="">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <p>Haoyang Shao 邵昊洋<br></p>
                 <ul class="list-inline item-details">
                     <li>Director of Hangzhou No.14 High School Astronomy Association</li>
@@ -216,7 +222,7 @@
             <div class="col-lg-2 col-lg-offset-2">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/dt.jpg" alt="">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-6">
                 <p>Zhichen Wang 王智琛（諦聽）<br></p>
                 <ul class="list-inline item-details">
                     <li>Senior astronomy amateur</li>
