--- a/members.html
+++ b/members.html
@@ -125,14 +125,8 @@
                    We will have a formal gathering at the beginning of each fall semester(always in September) to recruit new members. Of course, you can also apply to join us during the whole term.<br><br>
                    我们将在每年9月开学时举行招新活动, 当然您也可以在学期中申请加入我们。<br><br>
                    We welcome all students interested in astronomy to join us！<br><br>
-                   我们欢迎所有对天文感兴趣的同学加入我们！<br>
-                </p>
-            </div>
-            <div class="col-lg-8 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/hy.jpg" alt="">
-            </div>
-            <div class="col-lg-8 col-lg-offset-2">
-                <p><br>Here is part of our members.<br><br>
+                   我们欢迎所有对天文感兴趣的同学加入我们！<br><br>
+                   Here is part of our members.<br><br>
                    下面是我们部分成员的简介。<br><br>
                 </p>
             </div>
