--- a/observatory.html
+++ b/observatory.html
@@ -121,7 +121,7 @@
                 <p>Our Observatory(Fengqi Observatory) located in Hangzhou No.14 High School, Xiacheng Dist., Hangzhou, Zhejiang Province, China (30°15'59.9"N ,120°09'16.0"E,Alt=35m).<br><br>
                    我们的天文台（凤起天文台）位于<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>凤起校区，地理坐标：东经120°09’16.0″，北纬30°15’59.9″，海拔35米。<br></p>
                 <div>
-                    <iframe width="500" height="400" frameborder="0" src="https://www.bing.com/maps/embed?h=400&w=500&cp=30.264049129314728~120.15878065748258&lvl=16&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
+                    <iframe width="300" height="300" frameborder="0" src="https://www.bing.com/maps/embed?h=400&w=500&cp=30.264049129314728~120.15878065748258&lvl=16&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
                     </iframe>
                 </div>
                 <p>Fengqi Observatory was built in late 20th century, and the whole observatory was completely upgraded in 2013.<br><br>
@@ -174,17 +174,22 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <p><br>We independently designed and manufactured the AstroSolar adapter of Celetron C14 which may be the largest adapter for Schmidt-Cassegrain telescope in Zhejiang Province. It enables the Celetron C14 to make high-quality solar observations during the day.<br><br>
                    我们自主设计制作了（可能是）浙江省口径最大的施卡望远镜巴德膜，使得C14望远镜可以在白天进行高质量的太阳观测。<br><br>
+                   It can achieve a series of tasks, such as detailed shooting and tracking of sunspots, and support students to study solar activity.<br><br>
+                   实现对太阳黑子的细节拍摄、变化追踪等系列任务，为我们研究太阳活动提供支持。<br><br>
                 </p>
             </div>
             <div class="col-lg-8 col-lg-offset-3">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/baader.jpg" alt="">
             </div>
             <div class="col-lg-8 col-lg-offset-2">
-                <p>There are also many mobile devices, including Skywatcher BKP250/1250, Skywatcher NEQ6, Skywatcher BKP150/750, etc.<br><br>
+                <p><br>There are also many mobile devices, including Skywatcher BKP250/1250, Skywatcher NEQ6, Skywatcher BKP150/750, etc.<br><br>
                    我们还有很多可移动的设备，包括信达10寸反射望远镜、NEQ6赤道仪等。<br><br>
                    We use them for outdoor observation activities.<br><br>
                    这些设备一般被用于外出观测活动。<br><br>
                 </p>     
+            </div>
+            <div class="col-lg-8 col-lg-offset-3">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/ssps.jpg" alt="">
             </div>
         </div>
     </div>
