--- a/observatory.html
+++ b/observatory.html
@@ -120,10 +120,13 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <p>Our Observatory(Fengqi Observatory) located in Hangzhou No.14 High School, Xiacheng Dist., Hangzhou, Zhejiang Province, China (30°15'59.9"N ,120°09'16.0"E,Alt=35m).<br><br>
                    我们的天文台（凤起天文台）位于<a href="http://www.h14z.cn/">浙江省杭州第十四中学</a>凤起校区，地理坐标：东经120°09’16.0″，北纬30°15’59.9″，海拔35米。<br></p>
-                <div>
-                    <iframe width="325" height="280" frameborder="0" src="https://cn.bing.com/maps/embed?h=280&w=325&cp=30.26417339476621~120.15875805369782&lvl=16&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
-                    </iframe>
-                </div>
+                </p>     
+            </div>
+            <div class="col-lg-4 col-lg-offset-4">
+                 <iframe width="325" height="280" frameborder="0" src="https://cn.bing.com/maps/embed?h=280&w=325&cp=30.26417339476621~120.15875805369782&lvl=16&typ=d&sty=r&src=SHELL&FORM=MBEDV8" scrolling="no">
+                 </iframe>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
                 <p><br>Fengqi Observatory was built in late 20th century, and the whole observatory was completely upgraded in 2013.<br><br>
                    凤起天文台始建于20世纪末，在2013年对天文台进行了整体改造升级。<br><br>
                    Here are photos which record its changes.<br><br>
