--- a/members.html
+++ b/members.html
@@ -146,6 +146,23 @@
                 </ul>
             </div>
             <div class="col-lg-12 text-center">
+                <h4>Adivser 顾问</h4>
+            </div>
+            <div class="col-lg-2 col-lg-offset-2">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/dt.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                <p>Zhichen Wang 王智琛（諦聽）<br></p>
+                <ul class="list-inline item-details">
+                    <li>Senior astronomy amateur</li>
+                    <li>资深天文爱好者</li>
+                    <li>Member of Hangzhou Astronomical Society(HZAS)</li>
+                    <li>杭州天文学会成员</li>
+                    <li>Honour Director of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
+                    <li>杭州市高中天文联合会名誉理事</li>
+                </ul>
+            </div>
+            <div class="col-lg-12 text-center">
                 <h4>Student Committee 理事会</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
@@ -211,23 +228,6 @@
                 </ul>
             </div>
             <div class="col-lg-12 text-center">
-                <h4>Adivser 顾问</h4>
-            </div>
-            <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/dt.jpg" alt="">
-            </div>
-            <div class="col-lg-6">
-                <p>Zhichen Wang 王智琛（諦聽）<br></p>
-                <ul class="list-inline item-details">
-                    <li>Senior astronomy amateur</li>
-                    <li>资深天文爱好者</li>
-                    <li>Member of Hangzhou Astronomical Society(HZAS)</li>
-                    <li>杭州天文学会成员</li>
-                    <li>Honour Director of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
-                    <li>杭州市高中天文联合会名誉理事</li>
-                </ul>
-            </div>
-            <div class="col-lg-12 text-center">
                 <h4>Former Committee 前任理事会</h4>
             </div>
             <div class="col-lg-4">
@@ -261,6 +261,15 @@
                     <li>Zixian Yang 杨子纤</li>
                     <li></li>
                 </ul>
+            </div>
+            
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/hy.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/sshy.jpg" alt="">
             </div>
         </div>
     </div>
