--- a/members.html
+++ b/members.html
@@ -127,10 +127,11 @@
                    We welcome all students interested in astronomy to join us！<br><br>
                    我们欢迎所有对天文感兴趣的同学加入我们！<br><br>
                    Here is part of our members.<br><br>
-                   下面是我们部分成员的简介。<br><br>
+                   下面是我们部分成员的简介。<br>
                 </p>
             </div>
             <div class="col-lg-12 text-center">
+                <p><br></p>
                 <h4>Guidance Counselor 指导老师</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
@@ -144,9 +145,9 @@
                     <li>M.Sc. in Geography, <a href="http://www.fjnu.edu.cn/english/">Fujian Normal University</a>, 2017</li>
                     <li>2017年，<a href="http://www.fjnu.edu.cn/">福建师范大学</a>地理科学学院，理学硕士</li>
                 </ul>
-                <p><br></p>
             </div>
             <div class="col-lg-12 text-center">
+                <p><br></p>
                 <h4>Adivser 顾问</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
@@ -162,9 +163,9 @@
                     <li>Honour Director of Hangzhou High-school Astronomical Associations Union(HHAAU)</li>
                     <li>杭州市高中天文联合会名誉理事</li>
                 </ul>
-                <p><br></p>
             </div>
             <div class="col-lg-12 text-center">
+                <p><br></p>
                 <h4>Student Committee 理事会</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
@@ -228,9 +229,9 @@
                     <li>the First Prize of Zhejiang Province Astronomy Olympiad, 2019</li>
                     <li>2019年，浙江省天文奥赛高中组一等奖</li>
                 </ul>
-                <p><br></p>
             </div>
             <div class="col-lg-12 text-center">
+                <p><br></p>
                 <h4>Former Committee 前任理事会</h4>
             </div>
             <div class="col-lg-4">
@@ -268,6 +269,9 @@
             
         </div>
         <div class="row">
+            <div class="col-lg-12 text-center">
+                <p><br></p>
+            </div>
             <div class="col-lg-6">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/hy.jpg" alt="">
             </div>
