--- a/members.html
+++ b/members.html
@@ -270,7 +270,8 @@
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
-                <p><br></p>
+                <h3>Group Photo 我们的合影</h3>
+                <hr class="star-primary">
             </div>
             <div class="col-lg-6">
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/hy.jpg" alt="">
