--- a/members.html
+++ b/members.html
@@ -169,7 +169,7 @@
                 <h4>Student Committee 理事会</h4>
             </div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/wy.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yun Wang 王芸<br></p>
@@ -197,7 +197,7 @@
             </div>
             <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/dy.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yao Dong 董垚<br></p>
@@ -208,7 +208,7 @@
             </div>
             <div class="col-lg-12"></div>
             <div class="col-lg-2 col-lg-offset-2">
-                <img class="img-responsive" src="https://h14ztws.github.io/pic/unknown.png" alt="">
+                <img class="img-responsive" src="https://h14ztws.github.io/pic/cyc.jpg" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Yiceng Cheng 程忆曾<br></p>
@@ -237,7 +237,7 @@
             <div class="col-lg-4">
                 <ul class="list-inline item-details">
                     <li>Jinyun Wang 王槿云</li>
-                    <li>Luhao Chen 陈渌浩</li>
+                    <li>Hosea Chen 陈渌浩</li>
                     <li>Yi Chen 陈宜</li>
                     <li>Hongchen Ye 叶泓辰</li>
                 </ul>
