--- a/members.html
+++ b/members.html
@@ -200,7 +200,7 @@
                 <img class="img-responsive" src="https://h14ztws.github.io/pic/dy.jpg" alt="">
             </div>
             <div class="col-lg-6">
-                <p>Yao Dong 董垚<br></p>
+                <p>Alexandra Dong 董垚<br></p>
                 <ul class="list-inline item-details">
                     <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
                     <li>杭十四中天文社副社长</li>
