--- a/members.html
+++ b/members.html
@@ -237,9 +237,9 @@
             <div class="col-lg-4">
                 <ul class="list-inline item-details">
                     <li>Jinyun Wang 王槿云</li>
-                    <li>Hosea Chen 陈渌浩</li>
+                    <li>Luhao Chen 陈渌浩</li>
                     <li>Yi Chen 陈宜</li>
-                    <li>Hongchen Ye 叶泓辰</li>
+                    <li>Hosea Ye 叶泓辰</li>
                 </ul>
             </div>
             <div class="col-lg-4">
