--- a/observatory.html
+++ b/observatory.html
@@ -67,7 +67,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Hangzhou No.14 High School Astronomy Association</a>
+                <a class="navbar-brand" href="https://h14ztws.github.io/#page-top">Hangzhou No.14 High School Astronomy Association</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
