--- a/HHAAU.html
+++ b/HHAAU.html
@@ -129,12 +129,6 @@
                         我们希望从高中生的角度去建立一个更开放的交流平台，以达到更好的效果，实现共同进步。<br><br>
                     </p>
                 </div>
-                <div class="col-lg-3 col-lg-offset-8">
-                    <p>>>><a href="https://h14ztws.github.io/members.html">View Our Members</a></p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-3">
-                    <img class="img-responsive" src="/pic/hy.jpg" alt="">
-                </div>
             </div>
         </div>
     </section>
@@ -174,7 +168,7 @@
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-3">
-                    <img class="img-responsive" src="/pic/fqo.jpg" alt="">
+                    <img class="img-responsive" src="https://h14ztws.github.io/hhaau.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -204,11 +198,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6">
-                    <img class="img-responsive" src="/pic/jntc.jpg" alt="">
-                </div>
-                <div class="col-lg-6">
-                    <img class="img-responsive" src="/pic/thp.jpg" alt="">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>
+                        Here are some of our activity logs in Chinese.<br><br>
+                        这是我们的一些活动记录。<br><br>
+                        <a href="https://mp.weixin.qq.com/s/C5EvzQ0bYKTLmln3NKO7CA">活动 | 盛夏星夜之杭中天联十二时辰</a><br>
+                        <a href="https://mp.weixin.qq.com/s/hdqP4Z4R6SyV1wrLMj46Hg">活动 | 在通湖-第十届全国天文论坛</a><br>
+                        <a href="https://mp.weixin.qq.com/s/Pa4kb2jTRDJWctvAxtKGCg">活动 | 杭中天联长三角星空大会之行</a><br>
+                        <a href="https://mp.weixin.qq.com/s/DpeOTK6kUhtaJNRuaPx3HQ">活动 | 在灿烂星河下，架起没有尽头的桥梁</a><br>
+                    </p>
                 </div>
             </div>
         </div>
