--- a/HHAAU.html
+++ b/HHAAU.html
@@ -168,7 +168,7 @@
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-3">
-                    <img class="img-responsive" src="https://h14ztws.github.io/hhaau.jpg" alt="">
+                    <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -198,7 +198,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-3">
+                    <hr class="star-third">
                     <p>
                         Here are some of our activity logs in Chinese.<br><br>
                         这是我们的一些活动记录。<br><br>
@@ -207,6 +208,9 @@
                         <a href="https://mp.weixin.qq.com/s/Pa4kb2jTRDJWctvAxtKGCg">活动 | 杭中天联长三角星空大会之行</a><br>
                         <a href="https://mp.weixin.qq.com/s/DpeOTK6kUhtaJNRuaPx3HQ">活动 | 在灿烂星河下，架起没有尽头的桥梁</a><br>
                     </p>
+                </div>
+                <div class="col-lg-8 col-lg-offset-3">
+                    <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau-ss.jpg" alt="">
                 </div>
             </div>
         </div>
