--- a/HHAAU.html
+++ b/HHAAU.html
@@ -153,6 +153,7 @@
                         The Affiliated High School to Hangzhou Normal University<br>
                         Hangzhou Foreign Languages School<br>
                         Xiaoshan High School, Zhejiang Province<br>
+                        Hangzhou Yuhang No.2 High School<br>
                     </p>
                     </div>
                 <div class="col-lg-4">
@@ -165,6 +166,7 @@
                         杭州师范大学附属中学<br>
                         杭州外国语学校<br>
                         浙江省萧山中学<br>
+                        余杭第二高级中学<br>
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-3">
@@ -209,8 +211,11 @@
                         <a href="https://mp.weixin.qq.com/s/DpeOTK6kUhtaJNRuaPx3HQ">活动 | 在灿烂星河下，架起没有尽头的桥梁</a><br>
                     </p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-3">
-                    <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau-ss.jpg" alt="">
+                <div class="col-lg-6">
+                    <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau-ss1.jpg" alt="">
+                </div>
+                <div class="col-lg-6">
+                    <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau-ss2.jpg" alt="">
                 </div>
             </div>
         </div>
