--- a/HHAAU.html
+++ b/HHAAU.html
@@ -35,7 +35,7 @@
   
 
   <!-- Custom Fonts -->
-  <link rel="stylesheet" href="http://dr-guangtou.github.io/css/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://jeromelachaud.com/freelancer-theme/css/font-awesome/css/font-awesome.min.css">
   <link
     href="//fonts.googleapis.com/css?family=Montserrat:400,700"
     rel="stylesheet"
@@ -169,6 +169,10 @@
                         余杭第二高级中学<br>
                     </p>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
                 <div class="col-lg-8 col-lg-offset-3">
                     <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau.jpg" alt="">
                 </div>
