--- a/HHAAU.html
+++ b/HHAAU.html
@@ -129,6 +129,9 @@
                         我们希望从高中生的角度去建立一个更开放的交流平台，以达到更好的效果，实现共同进步。<br><br>
                     </p>
                 </div>
+                <div class="col-lg-8 col-lg-offset-3">
+                    <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau.jpg" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -143,38 +146,27 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p style="color: #fff;">
-                        Hangzhou No.2 High School of Zhejiang Province<br>
-                        Hangzhou Xuejun High School of Zhejiang Province<br>
-                        Zhejiang Hangzhou High School<br>
-                        Zhejiang Province Hangzhou No.14 High School<br>
-                        The High School Attached to Zhejiang University<br>
-                        The Affiliated High School to Hangzhou Normal University<br>
-                        Hangzhou Foreign Languages School<br>
-                        Xiaoshan High School, Zhejiang Province<br>
-                        Hangzhou Yuhang No.2 High School<br>
-                    </p>
-                    </div>
-                <div class="col-lg-4">
-                    <p style="color: #fff;">
-                        浙江省杭州第二中学<br>
-                        浙江省杭州学军中学<br>
-                        浙江省杭州高级中学<br>
-                        浙江省杭州第十四中学<br>
-                        浙江大学附属中学<br>
-                        杭州师范大学附属中学<br>
-                        杭州外国语学校<br>
-                        浙江省萧山中学<br>
-                        余杭第二高级中学<br>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-3">
-                    <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau.jpg" alt="">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <ul class="list-inline item-details" style="color: #fff;">
+                        <li>Hangzhou No.2 High School of Zhejiang Province</li>
+                        <li>浙江省杭州第二中学</li>
+                        <li>Hangzhou Xuejun High School of Zhejiang Province</li>
+                        <li>浙江省杭州学军中学</li>
+                        <li>Zhejiang Hangzhou High School</li>
+                        <li>浙江省杭州高级中学</li>
+                        <li>Zhejiang Province Hangzhou No.14 High School</li>
+                        <li>浙江省杭州第十四中学</li>
+                        <li>The High School Attached to Zhejiang University</li>
+                        <li>浙江大学附属中学</li>
+                        <li>The Affiliated High School to Hangzhou Normal University</li>
+                        <li>杭州师范大学附属中学</li>
+                        <li>Hangzhou Foreign Languages School</li>
+                        <li>杭州外国语学校</li>
+                        <li>Xiaoshan High School, Zhejiang Province</li>
+                        <li>浙江省萧山中学</li>
+                        <li>Hangzhou Yuhang No.2 High School</li>
+                        <li>余杭第二高级中学</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -193,13 +185,13 @@
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>
                         We welcome all the High-school Astronomical Associations join us.<br><br>
-                        We will organize many activities about astronomy, such as sAstronomical lectures, open classes and observations.<br><br>
+                        We will organize many activities about astronomy, such as sAstronomical lectures, open classes and observations.<br>
                     </p>
                 </div>
                 <div class="col-lg-4">
                     <p>
                         我们欢迎所有的高中天文社团加入我们。<br><br>
-                        我们会开展许多天文活动，例如科普讲座、天文公开课、组织外出观测等。<br><br>
+                        我们会开展许多天文活动，例如科普讲座、天文公开课、组织外出观测等。<br>
                     </p>
                 </div>
             </div>
