--- a/HHAAU.html
+++ b/HHAAU.html
@@ -146,27 +146,32 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <ul class="list-inline item-details" style="color: #fff;">
-                        <li>Hangzhou No.2 High School of Zhejiang Province</li>
-                        <li>浙江省杭州第二中学</li>
-                        <li>Hangzhou Xuejun High School of Zhejiang Province</li>
-                        <li>浙江省杭州学军中学</li>
-                        <li>Zhejiang Hangzhou High School</li>
-                        <li>浙江省杭州高级中学</li>
-                        <li>Zhejiang Province Hangzhou No.14 High School</li>
-                        <li>浙江省杭州第十四中学</li>
-                        <li>The High School Attached to Zhejiang University</li>
-                        <li>浙江大学附属中学</li>
-                        <li>The Affiliated High School to Hangzhou Normal University</li>
-                        <li>杭州师范大学附属中学</li>
-                        <li>Hangzhou Foreign Languages School</li>
-                        <li>杭州外国语学校</li>
-                        <li>Xiaoshan High School, Zhejiang Province</li>
-                        <li>浙江省萧山中学</li>
-                        <li>Hangzhou Yuhang No.2 High School</li>
-                        <li>余杭第二高级中学</li>
-                    </ul>
+                
+                <div class="col-lg-6 col-lg-offset-2">
+                    <p style="color: #fff;">
+                        Hangzhou No.2 High School of Zhejiang Province<br>
+                        Hangzhou Xuejun High School of Zhejiang Province<br>
+                        Zhejiang Hangzhou High School<br>
+                        Zhejiang Province Hangzhou No.14 High School<br>
+                        The High School Attached to Zhejiang University<br>
+                        The Affiliated High School to Hangzhou Normal University<br>
+                        Hangzhou Foreign Languages School<br>
+                        Xiaoshan High School, Zhejiang Province<br>
+                        Hangzhou Yuhang No.2 High School<br>
+                    </p>
+                    </div>
+                <div class="col-lg-4">
+                    <p style="color: #fff;">
+                        浙江省杭州第二中学<br>
+                        浙江省杭州学军中学<br>
+                        浙江省杭州高级中学<br>
+                        浙江省杭州第十四中学<br>
+                        浙江大学附属中学<br>
+                        杭州师范大学附属中学<br>
+                        杭州外国语学校<br>
+                        浙江省萧山中学<br>
+                        余杭第二高级中学<br>
+                    </p>
                 </div>
             </div>
         </div>
