--- a/HHAAU.html
+++ b/HHAAU.html
@@ -83,7 +83,7 @@
                         <a href="#unit">Unit</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#apply">Join us</a>
+                        <a href="#activities">Activities</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -173,43 +173,41 @@
                         余杭第二高级中学<br>
                     </p>
                 </div>
+                <div class="col-lg-12 text-center">
+                    <p><br>
+                        We welcome all the High-school Astronomical Associations join us.<br><br>
+                        我们欢迎所有的高中天文社团加入我们。<br><br>
+                    </p>
+                </div>
             </div>
         </div>
     </section>
     
-    <!-- Apply Section -->
-    <section id="apply">
+    <!-- Activities Section -->
+    <section id="activities">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>Join us 加入我们</h3>
+                    <h3>Activities 我们的活动</h3>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>
-                        We welcome all the High-school Astronomical Associations join us.<br><br>
-                        We will organize many activities about astronomy, such as sAstronomical lectures, open classes and observations.<br>
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <p>
-                        我们欢迎所有的高中天文社团加入我们。<br><br>
-                        我们会开展许多天文活动，例如科普讲座、天文公开课、组织外出观测等。<br>
-                    </p>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-8 col-lg-offset-3">
-                    <hr class="star-third">
                     <p>
+                        We have organized many activities about astronomy, such as Astronomical lectures, open classes and observations.<br>
+                        我们会开展许多天文活动，例如科普讲座、天文公开课、组织外出观测等。<br><br>
                         Here are some of our activity logs in Chinese.<br><br>
                         这是我们的一些活动记录。<br><br>
                         <a href="https://mp.weixin.qq.com/s/C5EvzQ0bYKTLmln3NKO7CA">活动 | 盛夏星夜之杭中天联十二时辰</a><br>
                         <a href="https://mp.weixin.qq.com/s/hdqP4Z4R6SyV1wrLMj46Hg">活动 | 在通湖-第十届全国天文论坛</a><br>
+                        <a href="https://mp.weixin.qq.com/s/Bjc2UUxytBscb3F0VUIvhw">有阴影的地方，就有光 —— 2018年杭中天联年度摄影展</a><br>
+                        <a href="https://mp.weixin.qq.com/s/3Y9vf-n1icU9X76g6r-f-Q">杭中天联2018年度总结</a><br>
                         <a href="https://mp.weixin.qq.com/s/Pa4kb2jTRDJWctvAxtKGCg">活动 | 杭中天联长三角星空大会之行</a><br>
-                        <a href="https://mp.weixin.qq.com/s/DpeOTK6kUhtaJNRuaPx3HQ">活动 | 在灿烂星河下，架起没有尽头的桥梁</a><br>
+                        <a href="https://mp.weixin.qq.com/s/DpeOTK6kUhtaJNRuaPx3HQ">活动 | 记杭中天联七校国庆天文观测</a><br>
+                        <a href="https://mp.weixin.qq.com/s/AZwXhmW8NT_M2oXAfJQgUw">活动 | 第九届全国天文社团发展论坛杭州团队回忆录</a><br><br>
+                        You can view more logs in our Wechat. We will update frequently.<br><br>
+                        您可以在我们的微信公众号中查看更多我们的活动记录。我们会经常对公众号进行内容更新。<br><br>
                     </p>
                 </div>
                 <div class="col-lg-6">
