--- a/HHAAU.html
+++ b/HHAAU.html
@@ -86,6 +86,9 @@
                         <a href="#activities">Activities</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#members">Members</a>
+                    </li>Members
+                    <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -174,7 +177,7 @@
                     </p>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <p><br>
+                    <p style="color: #fff;"><br>
                         We welcome all the High-school Astronomical Associations join us.<br><br>
                         我们欢迎所有的高中天文社团加入我们。<br><br>
                     </p>
@@ -193,7 +196,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-3">
+                <div class="col-lg-8 col-lg-offset-2">
                     <p>
                         We have organized many activities about astronomy, such as Astronomical lectures, open classes and observations.<br>
                         我们会开展许多天文活动，例如科普讲座、天文公开课、组织外出观测等。<br><br>
@@ -205,9 +208,7 @@
                         <a href="https://mp.weixin.qq.com/s/3Y9vf-n1icU9X76g6r-f-Q">杭中天联2018年度总结</a><br>
                         <a href="https://mp.weixin.qq.com/s/Pa4kb2jTRDJWctvAxtKGCg">活动 | 杭中天联长三角星空大会之行</a><br>
                         <a href="https://mp.weixin.qq.com/s/DpeOTK6kUhtaJNRuaPx3HQ">活动 | 记杭中天联七校国庆天文观测</a><br>
-                        <a href="https://mp.weixin.qq.com/s/AZwXhmW8NT_M2oXAfJQgUw">活动 | 第九届全国天文社团发展论坛杭州团队回忆录</a><br><br>
-                        You can view more logs in our Wechat. We will update frequently.<br><br>
-                        您可以在我们的微信公众号中查看更多我们的活动记录。我们会经常对公众号进行内容更新。<br><br>
+                        <a href="https://mp.weixin.qq.com/s/AZwXhmW8NT_M2oXAfJQgUw">活动 | 第九届全国天文社团发展论坛杭州团队回忆录</a><br>
                     </p>
                 </div>
                 <div class="col-lg-6">
@@ -216,22 +217,71 @@
                 <div class="col-lg-6">
                     <img class="img-responsive" src="https://h14ztws.github.io/pic/hhaau-ss2.jpg" alt="">
                 </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p><br>
+                        You can view more logs in our Wechat. We will update frequently.<br><br>
+                        您可以在我们的微信公众号中查看更多我们的活动记录。我们会经常对公众号进行内容更新。<br><br>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <!-- Members Section -->
+    <section id="members">
+        <div class="container" style="background: #233140;">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3 style="color: #fff;">Members 成员</h3>
+                    <hr class="star-third">
+                </div>
+            </div>
+            <div class="col-lg-10 col-lg-offset-2">
+                <p style="color: #fff;"><br></p>
+                <h4>Committee 理事会</h4>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>Tangtangfang Fang 方唐唐方<br></p>
+                <ul class="list-inline item-details">
+                    <li>President</li>
+                    <li>理事长</li>
+                    <li>Associate President of The High School Attached to Zhejiang University </li>
+                    <li>浙附明远天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6 col-lg-offset-2">
+                <p>Yuming Cao 曹雨铭<br></p>
+                <ul class="list-inline item-details">
+                    <li>Associate President</li>
+                    <li>副理事长</li>
+                    <li>Associate President of Hangzhou No.14 High School Astronomy Association</li>
+                    <li>杭十四中天文社副社长</li>
+                </ul>
+            </div>
+            <div class="col-lg-6 col-lg-offset-2">
+                <p>Yuhao Zhu 朱昱浩<br></p>
+                <ul class="list-inline item-details">
+                    <li>Associate President</li>
+                    <li>副理事长</li>
+                    <li>Associate President of Hangzhou No.2 High School Astronomy Association</li>
+                    <li>杭二中天文社副社长</li>
+                </ul>
             </div>
         </div>
     </section>
     
     <!-- Contact Section -->
     <section id="contact">
-        <div class="container" style="background: #233140;">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 style="color: #fff;">Contact 联系我们</h3>
+                    <h3>Contact 联系我们</h3>
                     <hr class="star-third">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p style="color: #fff;">
+                    <p>
                         Email: <a href="mailto:3291088932@qq.com">3291088932@qq.com</a><br>
                         Wechat: 杭中天联天文势力<br>
                         QQ: 3291088932<br>
